--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>My Website Home Page</title>
+    <title>EM Website Home Page</title>
 </head>
 <body>
-  <h1>Welcome to my website, automatically!</h1>
-  <p>Now hosted on Amazon S3!</p>
+  <h1>Welcome to my website</h1>
+  <p>Hosted on Amazon S3!v402</p>
 </body>
 </html>
