--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
   <h1>Welcome to my website</h1>
-  <p>Hosted on Amazon S3! v4.34 FINAL</p>
+  <p>Hosted on Amazon S3! v4.34 CALEB</p>
 </body>
 </html>
